@@ -7,6 +7,7 @@
 - Refactored the prerequisite configuration
 - Added billing to your hours
   - You can pay or earn! Define the expected earnings and transactions over your day and even how much billable hours you expect.
+  - Added a option to disable billing to specific days
 
 * Version 0.3.0 (25 Sep 2024)
 - Option to highlight now action at Markdown representation =--highlightAction=
